Tue Apr 11 16:33:41 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds_sysdep_public.h.in include/tdsver.h.in:
	- small constification

Tue Apr 11 13:51:43 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/connect.c: do not fail if not FreeTDS
	* src/odbc/unittests/raiserror.c: more verbose

Mon Apr 10 18:14:17 EDT 2006	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/apps/tsql.c src/tds/config.c
	- report sysconfdir with tsql -C

Mon Apr 10 11:59:53 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: cleanup

Fri Apr 07 09:38:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-other.sh: update to php 5.1
	* phptests/nextres.php: a bit more verbose

Thu Apr 06 11:37:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/coverage.sh: less verbose 
	* src/dblib/bcp.c: small change

Wed Apr 05 08:42:54 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test.sh: cleanup
	* misc/test-auto.sh: allow configuration
	* misc/test-other.sh: make output suitable for online.pl
	* src/apps/tsql.c:
	- improve documentation
	- fix problem for multiple options
	* src/odbc/odbc.c src/tds/token.c: avoid void message to application

Wed Apr 05 07:09:32 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: remove some warnings

Wed Mar 29 18:25:54 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* m4/ac_caolan_func_which_gethostbyname_r.m4:
	* m4/ac_have_inaddr_none.m4 m4/ac_have_malloc_options.m4:
	* m4/ac_raf_func_which_getservbyname_r.m4:
	* m4/ac_tds_func_which_gethostbyaddr_r.m4:
	* m4/ac_tds_func_which_getpwuid_r.m4:
	* m4/ac_tds_func_which_localtime_r.m4:
	* m4/ax_cflags_gcc_option.m4 m4/lib-link.m4:
	* m4/sprintf_i64_format.m4 m4/type_socklen_t.m4:
	- quote as necessary

Mon Mar 27 19:01:05 EST 2006	JK Lowden <jklowden@schemamania.org>
	* configure.ac
	* m4/ac_caolan_func_which_gethostbyname_r.m4
	* m4/ac_have_inaddr_none.m4