@@ -20,8 +20,7 @@
 #ifndef _tds_sysdep_public_h_
 #define _tds_sysdep_public_h_
 
-static const char rcsid_tds_sysdep_public_h[] = "$Id: tds_sysdep_public.h.in,v 1.10 2006/04/11 14:34:07 freddy77 Exp $";
-static const void *const no_unused_tds_sysdep_public_h_warn[] = { rcsid_tds_sysdep_public_h, no_unused_tds_sysdep_public_h_warn };
+/* $Id: tds_sysdep_public.h.in,v 1.11 2006/04/12 13:54:10 freddy77 Exp $ */
 
 #ifdef __cplusplus
 extern "C"
