@@ -1,3 +1,10 @@
+Wed Apr 12 15:53:18 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
+	* include/tds.h include/tds_sysdep_private.h:
+	* include/tds_sysdep_public.h.in include/tdsconvert.h:
+	* include/tdsver.h.in:
+	- avoid ident strings in all objects
+	* m4/sprintf_i64_format.m4: add Ld format
+
 Tue Apr 11 16:33:41 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
 	* include/tds_sysdep_public.h.in include/tdsver.h.in:
 	- small constification
